# lib/api-spec/openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.1.0
 info:
   title: Api
   version: 0.1.0
-  description: Próximo de Mim API
+  description: Perto de Mim API
 servers:
   - url: /api
     description: Base API path
@@ -186,6 +186,11 @@ components:
           type: ["string", "null"]
         profession:
           type: string
+        skills:
+          type: array
+          items:
+            type: string
+          nullable: true
         professionDetail:
           type: ["string", "null"]
         lessonType:
@@ -206,7 +211,7 @@ components:
 
     ProfessionalInput:
       type: object
-      required: [name, profession, level]
+      required: [name, skills, level]
       properties:
         name:
           type: string
@@ -216,6 +221,10 @@ components:
           type: string
         profession:
           type: string
+        skills:
+          type: array
+          items:
+            type: string
         professionDetail:
           type: string
         lessonType:
